[workspace]
members = [ "lib/flashloan_fn", "lib/utils_fn",
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
mango = { version = "0.6.0", git = "https://github.com/blockworks-foundation/mango-v4" }
